--- a/src/HomePage.css
+++ b/src/HomePage.css
@@ -22,19 +22,44 @@
 
 .Main-Headline, .Secondary-Headline ,.Subtext,.Button-Text ,.Date-Time {
     padding: 4%;
-    width: 100%
+    width: 100%;
 }
-
 input {
- width: 100%;
- height: 30px
+    width: 100%;
+    height: 30px;
 }
 
+.radio {
+ width: 10px;
+ height: 5rem;
+ margin: .5em;
+}
+
+img {
+    width : 5em;
+    height: 5em;
+    border-radius: .5em;
+
+
+}
 .background-picker {
-    border: 1px solid black
+    width: 100%;
+   display: flex;
+   justify-content: space-around;
     
 }
 
 .bg1,.bg2 {
     width: 5%;
+}
+button {
+    background: white;
+    color: var(--primary);
+    padding: 1em;
+    
+}
+
+.error {
+    font-size: small;
+    color: red;
 }
