--- a/src/index.css
+++ b/src/index.css
@@ -12,4 +12,5 @@ body{
   font-family: 'Poppins';
   height: 100vh;
   width: 100vw;
+  font-size: calc(14px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));
 }
